samples/_failures_safe/1761274657_85d683_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b985b3c4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b985b3c4.c:170:17: error: expected declaration or statement at end of input
  170 |                 t->token_count++;
      |                 ^
./samples/SAFE/__tmp_b985b3c4.c:170:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b985b3c4.c:170:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b985b3c4.c:170:17: error: expected declaration or statement at end of input
